--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "Patrik Janoušek <patrikjanousek97@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.1.6",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
@@ -21,9 +22,10 @@
     "gulp-util": "^3.0.8"
   },
   "dependencies": {
-    "codemirror": "^5.40.2",
+    "codemirror": "^5.42.0",
     "crypto-js": "^3.1.9-1",
     "jquery": "^3.3.1",
+    "natives": "^1.1.6",
     "remodal": "^1.1.1"
   }
 }
