--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
         build:
             context: .
             dockerfile: docker/nginx/Dockerfile
+        restart: unless-stopped
         env_file:
           - .env
         networks:
@@ -32,6 +33,7 @@ services:
         build:
             context: .
             dockerfile: docker/uwsgi/Dockerfile
+        restart: unless-stopped
         networks:
           - application
         volumes:
@@ -41,6 +43,7 @@ services:
 
     redis:
         image: redis:alpine
+        restart: unless-stopped
         volumes:
           - ./storage/redis:/data
         networks:
