--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Patrik Janoušek <patrikjanousek97@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.4.5",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
@@ -18,13 +18,15 @@
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.1",
-    "gulp-util": "^3.0.8"
+    "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.4"
   },
   "dependencies": {
-    "codemirror": "^5.42.0",
+    "codemirror": "^5.47.0",
     "crypto-js": "^3.1.9-1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "natives": "^1.1.6",
     "remodal": "^1.1.1"
   }
